--- a/app/login.ejs
+++ b/app/login.ejs
@@ -15,8 +15,8 @@
                         <path d="M86.77,58.12A13.79,13.79,0,1,0,73,71.91,13.79,13.79,0,0,0,86.77,58.12M97,103.67a3.41,3.41,0,0,0,3.39-3.84,27.57,27.57,0,0,0-54.61,0,3.41,3.41,0,0,0,3.39,3.84Z"/>
                     </g>
                 </svg>
-                <span class="loginErrorSpan" id="loginEmailError">* Invalid Value</span>
-                <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL OU PSEUDO"/>
+                <span class="loginErrorSpan" id="loginEmailError">* Valeur Invalide</span>
+                <input id="loginUsername" class="loginField" type="text" placeholder="IDENTIFIANT"/>
             </div>
             <div class="loginFieldContainer">
                 <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
