--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -97,7 +97,7 @@
                 <div id="content">
                     <div id="server_status_wrapper">
                         <span class="bot_label" id="landingPlayerLabel">SERVEUR</span>
-                        <span id="player_count">HORS LIGNE</span>
+                        <span id="player_count">OFF</span>
                     </div>
                     <div class="bot_divider"></div>
                     <div id="mojangStatusWrapper">
@@ -209,7 +209,7 @@
             </div>
             <div id="newsErrorFailed" style="display: none;">
                 <span id="nEFailedSpan" class="newsErrorContent">Erreur lors du chargement des News</span>
-                <button id="newsErrorRetry">Try Again</button>
+                <button id="newsErrorRetry">Réesayer</button>
             </div>
             <div id="newsErrorNone" style="display: none;">
                 <span id="nENoneSpan" class="newsErrorContent">Aucune News</span>
