--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -340,11 +340,11 @@
             <div class="settingsChangelogContainer">
                 <div class="settingsChangelogContent">
                     <div class="settingsChangelogHeadline">
-                        <div class="settingsChangelogLabel">What's New</div>
-                        <div class="settingsChangelogTitle">Update Release Notes</div>
+                        <div class="settingsChangelogLabel">Changements</div>
+                        <div class="settingsChangelogTitle">Mettre à jour les notes</div>
                     </div>
                     <div class="settingsChangelogText">
-                        No Release Notes
+                        Aucune notes de mise à jour
                     </div>
                 </div>
             </div>
