--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -30,11 +30,11 @@
             </div>
             <div id="settingsAddAccountContainer">
                 <button id="settingsAddAccount">
-                    <span id="settingsAddAccountText">&#43; Ajouter un Compte</span>
+                    <span id="settingsAddAccountText">&#43; Ajouter un compte</span>
                 </button>
             </div>
             <div id="settingsCurrentAccountsHeader">
-                <span class="settingsFieldTitle">Comptes Disponibles</span>
+                <span class="settingsFieldTitle">Vos comptes</span>
             </div>
             <div id="settingsCurrentAccounts">
                 <!-- Auth accounts populated here. -->
@@ -235,7 +235,7 @@
                 <span class="settingsTabHeaderText">Paramètres du Launcher</span>
                 <span class="settingsTabHeaderDesc">Options en rapport avec le launcher en lui même.</span>
             </div>
-            <div class="settingsFieldContainer">
+            <!--<div class="settingsFieldContainer">
                 <div class="settingsFieldLeft">
                     <span class="settingsFieldTitle">Accepter les Pre-Releases.</span>
                     <span class="settingsFieldDesc">Les Pre-Releases incluent des nouvelles fonctionnalités qui peuvent créer des bugs ou des ralentissements.<br>Cette option sera forcée si vous utilisez une version Pre-Release.</span>
@@ -246,7 +246,7 @@
                         <span class="toggleSwitchSlider"></span>
                     </label>
                 </div>
-            </div>
+            </div>-->
             <div class="settingsFileSelContainer">
                 <div class="settingsFileSelContent">
                     <div class="settingsFieldTitle" id="settingsDataDirTitle">Répertoire de données</div>
@@ -304,7 +304,7 @@
                         <div class="settingsChangelogTitle">Changelog</div>
                     </div>
                     <div class="settingsChangelogText">
-                        Aucune notes
+                        Aucunes notes
                     </div>
                 </div>
                 <div class="settingsChangelogActions">
@@ -344,7 +344,7 @@
                         <div class="settingsChangelogTitle">Mettre à jour les notes</div>
                     </div>
                     <div class="settingsChangelogText">
-                        Aucune notes de mise à jour
+                        Aucunes notes de mise à jour
                     </div>
                 </div>
             </div>
