--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -2308,7 +2308,7 @@ input:checked + .toggleSwitchSlider:before {
     top: 25px;
     display: inline-flex;
     line-height: 24px;
-    left: 50px;
+    /* left: 50px; */
 }
 #landingContainer > #lower > #center {
     position: relative;
@@ -2812,6 +2812,7 @@ input:checked + .toggleSwitchSlider:before {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    font-size: 20px;
 }
 #avatarOverlay:hover,
 #avatarOverlay:focus {
