--- a/app/overlay.ejs
+++ b/app/overlay.ejs
@@ -1,6 +1,6 @@
 <div id="overlayContainer" style="display: none;">
     <div id="serverSelectContent" style="display: none;">
-        <span id="serverSelectHeader">Serveurs Disponibles</span>
+        <span id="serverSelectHeader">Modpacks disponibles</span>
         <div id="serverSelectList">
             <div id="serverSelectListScrollable">
                 <!-- Server listings populated here. -->
